examples/test/testpolicy10836.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10836
  namespace: namespace24
spec:
  podSelector:
    matchLabels:
      key41: value46
      key21: value1
      key24: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value10
          key10: value2
      podSelector:
        matchLabels:
          key40: value27
          key43: value44
          key18: value33
